# bff

./: .gitignore  API Gateway vs BFF_v0.pptx  README.md  Tiltfile  nx.json  package-lock.json  package.json  pyproject.toml
apps/bff/: .eslintrc.json  Dockerfile  Tiltfile  jest.config.ts  project.json  server.ts  webpack.config.ts
apps/bff-e2e/: project.json
apps/bff-e2e/src/e2e/: app.cy.ts
apps/bff/deploy/: Chart.yaml  values-dev.yaml  values.yaml
apps/bff/deploy/templates/: deployment.yaml
apps/bff/src/: index.html  styles.scss
apps/bff/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.guards.ts  app.routes.ts  nx-welcome.component.ts
apps/bff/src/app/types/: pokemon.model.ts  (+1 more)
apps/desktop-api/: Dockerfile  README.md  Tiltfile  project.json  pyproject.toml
apps/desktop-api/deploy/: Chart.yaml  values.yaml
apps/desktop-api/desktop_api/: app.py  hello.py  main.py
apps/desktop-api/tests/: test_hello.py
apps/legacy-api/: Dockerfile  README.md  Tiltfile  project.json  pyproject.toml
apps/legacy-api/deploy/: values.yaml
apps/legacy-api/legacy_api/: app.py  hello.py  main.py
apps/legacy-api/tests/: test_hello.py
apps/mobile-api/: Dockerfile  README.md  Tiltfile  project.json  pyproject.toml
apps/mobile-api/deploy/: values.yaml
apps/mobile-api/mobile_api/: app.py  hello.py  main.py
apps/mobile-api/tests/: test_hello.py
bff/: Chart.yaml  values-dev.yaml  values.yaml
bff/charts/desktop-api/: values.yaml
bff/charts/legacy-api/: Chart.yaml  values.yaml
bff/charts/mobile-api/: Chart.yaml  values.yaml
(+46 files in other folders)
